--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -43,9 +43,6 @@ const {
   />
   <div class="mx-auto max-w-7xl p-4 md:px-8">
     <div class={`md:flex ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16`}>
-      <div class="md:basis-1/3 self-center">
-        {content && <div class="mb-12 text-lg dark:text-slate-400" set:html={content} />}
-      </div>
       <div aria-hidden="true" class="mt-6 md:mt-0 md:basis-2/3">
         {
           image && (
@@ -66,6 +63,9 @@ const {
             </div>
           )
         }
+      </div>
+      <div class="md:basis-1/3 self-center">
+        {content && <div class="mt-12 md:mt-0 dark:text-slate-400" set:html={content} />}
       </div>
     </div>
   </div>
