--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,114 +1,48 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
 
-import Header from '~/components/widgets/Header.astro';
 import Hero from '~/components/widgets/Hero.astro';
 import Content from '~/components/widgets/Content.astro';
-import CallToAction from '~/components/widgets/CallToAction.astro';
-import Features3 from '~/components/widgets/Features3.astro';
-import Testimonials from '~/components/widgets/Testimonials.astro';
-import Steps from '~/components/widgets/Steps.astro';
-import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 import { Icon } from 'astro-icon/components';
-
-const socialLinks = [
-  { ariaLabel: 'X', icon: 'tabler:brand-x', href: '#' },
-  { ariaLabel: 'Instagram', icon: 'tabler:brand-instagram', href: '#' },
-  { ariaLabel: 'Facebook', icon: 'tabler:brand-facebook', href: '#' },
-  { ariaLabel: 'Github', icon: 'tabler:brand-github', href: 'https://github.com/onwidget/astrowind' },
-];
+import { projects } from '~/navigation.js';
+import ListItem from '~/components/blog/ListItem.astro';
 
 const metadata = {
-  title: 'Personal Homepage Demo',
+  title: 'Afif Jamhari | Fullstack Developer',
 };
 ---
 
 <Layout metadata={metadata}>
-  <!-- Hero2 Widget ******************* -->
-
-  <!-- image={{
-      src: 'https://images.unsplash.com/photo-1619983081563-430f63602796?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80',
-      alt: 'Art and Music Poster Image',
-    }} -->
-  <Hero id="hero" actions={[{ variant: 'primary', target: '_blank', text: "Let's Work Together!", href: '/' }]}>
+  <Hero id="hero">
+    <!-- actions={[{ variant: 'primary', target: '_blank', text: "Let's Work Together!", href: '/' }]} -->
     <Fragment slot="title">
-      <span class="ms-4">Afif Jamhari,</span>
+      <span>Afif Jamhari,</span>
       <br />
       Full Stack Developer
     </Fragment>
     <Fragment slot="subtitle">
-      <!-- I strive to craft intuitive solutions. Proficient in full-stack development using modern techniques. -->
       <div class="flex mx-auto text-muted w-fit">
-        <Icon name="tabler:point-filled" class="w-7 h-7 rtl:mr-0 rtl:ml-2 text-primary" />
+        <Icon name="tabler:point-filled" class="w-7 h-7 rtl:mr-0 rtl:ml-2 text-accent" />
         <span class="my-auto"> Currently Available</span>
       </div>
     </Fragment>
   </Hero>
 
-  <!-- Content Widget **************** -->
-  <Content
-    id="porfolio"
-    title=""
-    subtitle=""
-    items={[]}
-    image={{
-      src: 'https://img.freepik.com/free-psd/laptop-screen-mockup_171918-185.jpg?w=1800&t=st=1706336897~exp=1706337497~hmac=c6e49b49ce2f94c3de0e30137aafa4f4afe3236dc4a430d9e490cab66cd54f46',
-      alt: 'Tech Design Image',
-    }}
-  >
-    <Fragment slot="content">
-      <a href="" class="hover:underline underline-offset-4">
-        <h3 class="text-2xl font-bold dark:text-white sm:text-3xl mb-2">
-          Simplifying and redesigning a learner experience platform
-        </h3>
-      </a>
-      <p class="text-muted">Simplifying and redesigning a learner experience platform.</p>
-    </Fragment>
-  </Content>
+  {
+    projects.map(({ title, subtitle, href, image }, index) => (
+      <Content isReversed={index % 2 == 0 ? true : false} isAfterContent={true} image={image}>
+        <Fragment slot="content">
+          <a href={href} class="hover:underline decoration-4 underline-offset-4">
+            <h3 class="lg:text-3xl font-bold dark:text-white text-3xl md:text-2xl mb-2 ">{title}</h3>
+          </a>
+          <p class="text-muted">{subtitle}</p>
+        </Fragment>
+      </Content>
+    ))
+  }
 
-  <!-- Content Widget **************** -->
-
-  <Content
-    isReversed
-    isAfterContent={true}
-    items={[]}
-    image={{
-      src: 'https://img.freepik.com/free-vector/landing-page-with-laptop_52683-28586.jpg?t=st=1706336871~exp=1706337471~hmac=0b4b049f8d8566774c478ffff70c2c00db1ee1e98cf7c42a84a1a11a015c1555',
-      alt: 'Art and Music Poster Image',
-    }}
-  >
-    <Fragment slot="content">
-      <a href="" class="hover:underline underline-offset-4">
-        <h3 class="text-2xl font-bold dark:text-white sm:text-3xl mb-2">Event poster for art & music festival</h3>
-      </a>
-      <p class="text-muted">Event poster for art & music festival.</p>
-    </Fragment>
-  </Content>
-
-  <!-- Content Widget **************** -->
-
-  <Content
-    isAfterContent={true}
-    items={[]}
-    image={{
-      src: 'https://img.freepik.com/free-vector/gradient-responsive-website-design_23-2149496034.jpg?w=1800&t=st=1706336968~exp=1706337568~hmac=11aeda972ef2d7d82eb0cb7d67b01cc4d20fdb62406f87edbd1501b94b2714b8',
-      alt: 'Fashion e-commerce Image',
-    }}
-  >
-    <Fragment slot="content">
-      <a href="" class="hover:underline underline-offset-4">
-        <h3 class="text-2xl font-bold dark:text-white sm:text-3xl mb-2">
-          E-commerce website redesign for fashion brand
-        </h3>
-      </a>
-      <p class="text-muted">E-commerce website redesign for fashion brand.</p>
-    </Fragment>
-
-    <!--  <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
-    </Fragment> -->
-  </Content>
-
+  {
+    /*
   <!-- Testimonials Widget *********** -->
 
   <!-- <Testimonials
@@ -170,4 +104,6 @@ const metadata = {
       </p>
     </Fragment>
   </CallToAction> -->
+  */
+  }
 </Layout>
